@@ -1,6 +1,7 @@
 version 0.8.1 - XX-MMM-2009
  . BitmapFontAtlas: .png image can be in subfolders (issue #464)
- . CocosNode: parent is set to nil only after calling onExit (issue #476)
+// . CocosNode: parent is set to nil only after calling onExit (issue #476)
+ . CocosNode: added user data (issue #482)
  . ParticleView: integrated Particle visual editor (issue #480)
  . TextureMgr: Async reuses EAGL context (issue #472)
  . tools: added mkatlas.pl script (issue #xxx)
